// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentEvent is rendered with custom content 1`] = `
<div
  class="euiCommentEvent testClass1 testClass2 css-p2ten8-euiCommentEvent-custom"
  data-type="custom"
>
  <div
    class="euiCommentEvent__body css-qfrqb9-euiCommentEvent__body-custom"
  >
    <p>
      Some custom content
    </p>
  </div>
</div>
`;

exports[`EuiCommentEvent props event is rendered 1`] = `
<div
  class="euiCommentEvent css-2kvt10-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header css-1l6lnwg-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent css-xa248o-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain css-1h0gm9q-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent css-ui5tce-euiCommentEvent__headerEvent"
          >
            commented
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props eventColor is rendered 1`] = `
<div
  class="euiCommentEvent css-p2ten8-euiCommentEvent-custom"
  data-type="custom"
/>
`;

exports[`EuiCommentEvent props eventIcon and eventIconAriaLabel are rendered 1`] = `
<div
  class="euiCommentEvent css-2kvt10-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header css-1l6lnwg-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent css-xa248o-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain css-1h0gm9q-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            aria-hidden="false"
            aria-label="edit"
            class="euiAvatar euiAvatar--s euiAvatar--user euiCommentEvent__headerEventIcon css-10tr4a1-euiAvatar-s-user-subdued-euiCommentEvent__headerEventIcon"
            role="img"
            title="edit"
          >
            <span
              class="euiAvatar__icon"
              data-euiicon-type="pencil"
            />
          </div>
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props timestamp is rendered 1`] = `
<div
  class="euiCommentEvent css-2kvt10-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header css-1l6lnwg-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent css-xa248o-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain css-1h0gm9q-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerTimestamp"
          >
            <time>
              21 days ago
            </time>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
